kubernetes/integ/postgresdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.integ.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.integ.yml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/daapi: "true"
        io.kompose.service: postgresdb
    spec:
      containers:
      - env:
        - name: PGPORT
          value: "5432"
        - name: POSTGRES_DB
          value: da_test
        - name: POSTGRES_HOST
          value: postgresdb
        - name: POSTGRES_PASSWORD
          value: password
        - name: POSTGRES_USER
          value: postgres
        image: postgres:10-alpine
        imagePullPolicy: ""
        name: postgresdb
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresdb-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgresdb-claim0
        persistentVolumeClaim:
          claimName: postgresdb-claim0
status: {}
