kubernetes/integ/daapi-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: daapi
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/daapi: "true"
  podSelector:
    matchLabels:
      io.kompose.network/daapi: "true"
